# pagent

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  pyproject.toml  tasks.json
configs/: logging.yaml
data/pagent_resources/global/prompts/: generator_prompt.txt  generator_tool.txt  guardrail_policy.txt  supervisor_decompose.txt  validator_check.txt  worker_reasoning.txt
docs/: architecture.md  guidelines.md
docs/tasks/: tasks.md
scripts/: setup.ps1  setup.sh  test_registry_discovery.py  test_rich_tree.py
src/agent_platform/: cli.py  logging_config.py  mailbox.py
src/agent_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agent_platform/runtime/: agent_factory.py  bootstrap.py  dispatcher.py  fact_sheet_agent.py  generator.py  guardrails.py  knowledge.py  lifecycle.py  logic.py  prompt_writer.py  quota.py  resource_manager.py  sandbox.py  search_agent.py  semantic_search.py  state.py  supervisor.py  validator.py  workspace.py
tests/: test_action_sequence.py  test_agent_factory.py  test_context_refinement.py  test_guardrails.py  test_knowledge.py  test_lifecycle.py  test_loop_detection.py  test_parser_robustness.py  test_quota.py  test_roles.py  test_runtime.py  test_sandbox.py  test_semantic_search.py  test_state.py  test_supervisor.py  test_supervisor_v2.py  test_todo.py  test_tool_node.py
tests/integration/: test_v0_orchestration.py  test_v10_codebase_triplets.py  test_v11_cli_tree_logic.py  test_v12_context_aware_guardrails.py  test_v1_lifecycle.py  test_v2_complex_flows.py  test_v3_repo_analysis.py  test_v3_sub_supervisors.py  test_v4_big_file_analysis.py  test_v5_persistence.py  test_v6_hitl_orchestration.py  test_v7_recursive_subgraphs.py  test_v8_supervisor_planning.py  test_v9_full_orchestration.py
(+35 files in other folders)
