[project]
name = "agent-platform"
version = "0.1.0"
description = "LangGraph-based multi-agent runtime with mailbox orchestration"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langgraph",
    "openai",
    "langchain-openai",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "structlog",
    "typer",
    "pytest",
    "pytest-asyncio",
    "numpy",
    "scipy",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "langchain-community"
    "langchain-experimental"
    "python-ripgrep>=0.0.2"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
